--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.87",
+    "@types/node": "^20.17.10",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "dotenv": "^16.4.5",
@@ -23,11 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "eject": "react-scripts eject",
     "dev": "REACT_APP_ENV=development REACT_APP_BRANCH=$(git rev-parse --abbrev-ref HEAD) react-scripts start",
-    "staging": "REACT_APP_ENV=staging react-scripts start",
-    "build:staging": "REACT_APP_ENV=staging react-scripts build",
-    "build:production": "REACT_APP_ENV=production react-scripts build"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,5 +46,9 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   }
 }
