--- a/lambda/package.json
+++ b/lambda/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js",
-    "start": "node index.js",
+    "dev": "nodemon dev-server.js",
     "build": "zip -r function.zip ."
   },
   "keywords": [],
@@ -16,5 +15,14 @@
     "axios": "^1.6.7",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   }
 }
