--- a/lambda/package.json
+++ b/lambda/package.json
@@ -2,10 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "handler.js",
   "scripts": {
-    "dev": "nodemon dev-server.js",
-    "build": "zip -r function.zip ."
+    "sam:build": "sam build",
+    "sam:local": "sam local start-api --env-vars env.local.json --port 3001",
+    "sam:invoke": "sam local invoke TokenExchangeFunction --env-vars env.local.json -e events/token-exchange.json"
   },
   "keywords": [],
   "author": "",
@@ -13,14 +14,9 @@
   "dependencies": {
     "@okta/jwt-verifier": "^4.0.1",
     "axios": "^1.6.7",
-    "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2"
   },
-  "devDependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "nodemon": "^3.0.2"
-  },
+  "devDependencies": {},
   "engines": {
     "node": ">=20.0.0",
     "npm": ">=10.0.0"
